--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://thoughts.kevinpsites.com"
+  "homepage": "https://thoughts.kevinpsites.com",
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
