Add Favorite Thoughts

--- a/src/appSettings.json
+++ b/src/appSettings.json
@@ -4,6 +4,7 @@
     "settings": "/settings",
     "new": "/new",
     "search": "/search",
-    "home": "/"
+    "home": "/",
+    "favorites": "/favorites"
   }
 }
