Add Login procedure

--- a/react/src/appSettings.json
+++ b/react/src/appSettings.json
@@ -6,5 +6,6 @@
     "search": "/search",
     "home": "/",
     "favorites": "/favorites"
-  }
+  },
+  "apiAddress": "https://571cp2h4ef.execute-api.us-east-1.amazonaws.com/prod"
 }
